--- a/config/splitkb_aurora_lily58.conf
+++ b/config/splitkb_aurora_lily58.conf
@@ -7,6 +7,7 @@
 
 # Uncomment the following lines to enable RGB underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
-
-CONFIG_ZMK_SLEEP=y # Enable deep sleep support
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=90000 # Milliseconds of inactivity before entering deep sleep
+# Enable deep sleep support
+CONFIG_ZMK_SLEEP=y
+# Milliseconds of inactivity before entering deep sleep
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=90000
