--- a/config/splitkb_aurora_lily58.conf
+++ b/config/splitkb_aurora_lily58.conf
@@ -8,6 +8,6 @@
 # Uncomment the following lines to enable RGB underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # Enable deep sleep support
-CONFIG_ZMK_SLEEP=y
+#CONFIG_ZMK_SLEEP=y
 # Milliseconds of inactivity before entering deep sleep
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=90000
+#CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=90000
