--- a/config/splitkb_aurora_lily58.conf
+++ b/config/splitkb_aurora_lily58.conf
@@ -11,3 +11,4 @@
 #CONFIG_ZMK_SLEEP=y
 # Milliseconds of inactivity before entering deep sleep
 #CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=90000
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
